Fixed Text Size in "Home.html"

--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -108,7 +108,7 @@
                 <div class="col-4 col-12-medium">
                     <span class="image fit"><img src="{% static 'page/images/members.jpg' %}" alt="" /></span>
                     <h3>구성원 소개</h3>
-                    <p>열정과 패기가 가득한 사자들을 소개합니다.</p>
+                    <p class="content">열정과 패기가 가득한 사자들을 소개합니다.</p>
                     <ul class="actions special">
                         <li><a href="{% url 'introduce' %}" class="button">More</a></li>
                     </ul>
@@ -116,7 +116,7 @@
                 <div class="col-4 col-12-medium">
                     <span class="image fit"><img src="{% static 'page/images/homework2.jpg' %}" alt="" /></span>
                     <h3>과제 제출</h3>
-                    <p>꾸준한 연습이 완벽을 만듭니다.</p>
+                    <p class="content">꾸준한 연습이 완벽을 만듭니다.</p>
                     <ul class="actions special">
                         <li><a href="{% url 'homeworklist' %}" class="button">More</a></li>
                     </ul>
@@ -124,7 +124,7 @@
                 <div class="col-4 col-12-medium">
                     <span class="image fit"><img src="{% static 'page/images/qna.jpg' %}" alt="" /></span>
                     <h3>Q&A</h3>
-                    <p>궁금한 점이 있나요? 같이 해결해보아요!</p>
+                    <p class="content">궁금한 점이 있나요? 같이 해결해보아요!</p>
                     <ul class="actions special">
                         <li><a href="{% url 'QnA' %}" class="button">More</a></li>
                     </ul>
