--- a/page/static/page/css/home.css
+++ b/page/static/page/css/home.css
@@ -371,6 +371,10 @@ input, select, textarea {
 			width: 33.33333%;
 		}
 
+		.row > .col-4 > .content {
+			font-size: 1rem;
+		}
+
 		.row > .off-4 {
 			margin-left: 33.33333%;
 		}
