--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block link %}{% static 'account/css/login.css' %}{% endblock %}
-{% block title %}Login{% endblock %}
+{% block title %}Likelion Camp{% endblock %}
 
 {% block content %}
     {% if error == 'wronginfo' %}
