--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -40,14 +40,14 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 {% if user.is_authenticated %}
-                <a class="nav-item nav-link active" href="{% url 'home' %}">
-                    Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link " href="{% url 'home' %}">
+                    Home </a>
                 <a class="nav-item nav-link " href="{% url 'introduce' %}">Introduce</a>
                 <a class="nav-item nav-link " href="{% url 'homeworklist' %}">Homework</a>
                 <a class="nav-item nav-link " href="{% url 'QnA' %}">QnA</a>
                 {% else %}
-                <a class="nav-item nav-link active " href="{% url 'home' %}">
-                    Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link " href="{% url 'home' %}">
+                    Home </a>
                 <a class="nav-item nav-link " href="{% url 'introduce' %}">Introduce</a>
                 <a class="nav-item nav-link " href="{% url 'login' %}" onclick="loginwarning()">Homework</a>
                 <a class="nav-item nav-link " href="{% url 'login' %}" onclick="loginwarning()">QnA</a>
