--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -49,7 +49,7 @@
             {% endif %}
             {% endfor %}
             <div style="text-align: center; margin-top: 10px;">
-                {% if notice_blogs.has_previous %}
+                {% if notice_blogs.has_previous and not notice_blogs.has_next %}
                 <a href="?page={{notice_blogs.previous_page_number}}" style="color: black; text-align: center; font-weight: bold;">←</a>
                 {# NowOfTotal #}
                 <span>[{{notice_blogs.number}}</span>
@@ -57,9 +57,17 @@
                 <span>{{notice_blogs.paginator.num_pages}}]</span>
                 {% endif %}
                 
+                {% if notice_blogs.has_previous and notice_blogs.has_next %}
+                <a href="?page={{notice_blogs.previous_page_number}}" style="color: black; text-align: center; font-weight: bold;">←</a>
+                {# NowOfTotal #}
+                <span>[{{notice_blogs.number}}</span>
+                <span>/</span>
+                <span>{{notice_blogs.paginator.num_pages}}]</span>
+                <a href="?page={{notice_blogs.next_page_number}}" style="color: black; text-align: center; font-weight: bold;">→</a>
+                {% endif %}
                 
-                {% if notice_blogs.has_next %}
-                <a href="?page={{notice_blogs.paginator.num_pages}}" style="color: black; text-align: center; font-weight: bold;">←</a>
+                
+                {% if notice_blogs.has_next and not notice_blogs.has_previous %}
                 {# NowOfTotal #}
                 <span>[{{notice_blogs.number}}</span>
                 <span>/</span>
@@ -90,7 +98,7 @@
             </div>
             {% endfor %}
             <div style="text-align: center; margin-top: 10px;">
-                {% if blogs.has_previous %}
+                {% if blogs.has_previous and not blogs.has_next %}
                 <a href="?page={{blogs.previous_page_number}}" style="color: black; font-weight: bold;">←</a>
                 {# NowOfTotal #}
                 <span>[{{blogs.number}}</span>
@@ -98,9 +106,17 @@
                 <span>{{blogs.paginator.num_pages}}]</span>
                 
                 {% endif %}
+                
+                {% if blogs.has_previous and blogs.has_next %}
+                <a href="?page={{blogs.previous_page_number}}" style="color: black; font-weight: bold;">←</a>
+                {# NowOfTotal #}
+                <span>[{{blogs.number}}</span>
+                <span>/</span>
+                <span>{{blogs.paginator.num_pages}}]</span>
+                <a href="?page={{blogs.next_page_number}}"style="color: black; text-align: center; font-weight: bold;">→</a>
+                {% endif %}
     
-                {% if blogs.has_next %}
-                <a href="?page={{blogs.paginator.num_pages}}" style="color: black; text-align: center; font-weight: bold;">←</a>
+                {% if blogs.has_next and not blogs.has_previous %}
                 {# NowOfTotal #}
                 <span>[{{blogs.number}}</span>
                 <span>/</span>
