--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -14,12 +14,12 @@
     <div class="shell">
         <header class="shell-header">
       
-            <h1>과제 알림 및 제출</h1>
+            <h1 style="text-align: center;">과제 알림 및 제출</h1>
       
       
         </header>
         <main class="shell-body">
-            <h2>공지사항</h2>
+            <h2>[공지사항]</h2>
 
             {% if superuser %}
             <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);font-size: 15px;">공지사항 추가</a><br>
