--- a/homework/static/homework/css/homeworklist.css
+++ b/homework/static/homework/css/homeworklist.css
@@ -17,14 +17,14 @@
     content: "";
     grid-column: 1/-1;
     grid-row: 1/3;
-    background-color: rgb(255, 153, 0);
+    background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 90%);
   }
   
   .shell-header {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     color: white;
-    background-color: rgb(255, 153, 0);
+    background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 100%);
     padding: 35px 20px;
     font-family: 'Noto Sans KR', sans-serif; 
     font-weight: bolder;
@@ -73,12 +73,16 @@
     box-shadow: 0px 1px 0px 0px;
   }
   .orange {
-    background-color: rgb(255, 153, 0);
-    box-shadow: 0px 3px 3px 0px #CD6509;
+    background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 100%);
+    box-shadow: 3px 3px 3px 0px #414040;
+    border: none;
+    margin: auto;
+    margin-left: calc(100%/2.19);
   }
   
   .orange:hover {
-    background-color: #FF983C;
+    color: black;
+    font-weight: bold;
   }
   summary:focus{
     border: none;
