--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -90,11 +90,8 @@
             <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: center; margin-top: 10px;">제출된 과제</summary>
             {% for blog in blogs %}
             <div style="margin-bottom: 10px; color: rgb(90, 90, 90);">
-                <a href="{% url 'detail' blog.id %}">
-                <a style="font-weight: bold;">【{{blog.author}}】/{{blog.pub_date}}</a>
-                <br>
-                {{ blog.title }}
-                </a>   
+                <a href="{% url 'detail' blog.id %}" style="font-weight: bold;">{{ blog.title }}【{{blog.author}}】/{{blog.pub_date}}
+                </a>
             </div>
             {% endfor %}
             <div style="text-align: center; margin-top: 10px;">
