homeworklist 부분 페이지 이동 오류 수정

--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -21,10 +21,9 @@
         <main class="shell-body">
             <h2>[공지사항]</h2>
 
-            {% if user.is_superuser == True %}
+            {% if superuser %}
             <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);font-size: 15px;">공지사항 추가</a><br>
             {% endif %}
-            <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);font-size: 15px;">공지사항 추가</a><br>
 
             {% for notice in notices.all reversed %}
              
