--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -21,8 +21,7 @@
     <script>
         function loginwarning() {
             alert('로그인 후 이용가능한 서비스입니다'); {
-                #
-                location.href = "{% url 'login' %}";#
+                location.href = "{% url 'login' %}";
             }
         }
     </script>
