--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -91,7 +91,7 @@
             <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: center; margin-top: 10px;">제출된 과제</summary>
             {% for blog in blogs %}
             <div style="margin-bottom: 10px; color: rgb(90, 90, 90);">
-                <a href="{% url 'detail' blog.id %}" style="font-weight: bold;">{{ blog.title }}【{{blog.author}}】/{{blog.pub_date}}
+                <a href="{% url 'detail' blog.id %}" style="color: rgb(90, 90, 90); font-size: 13px;">{{ blog.title }}【{{blog.author}}】/{{blog.pub_date}}
                 </a>
             </div>
             {% endfor %}
