--- a/stacklion/static/stacklion/css/QnA.css
+++ b/stacklion/static/stacklion/css/QnA.css
@@ -3,58 +3,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap');
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
-body{
-    background-color: #F2F2F2;
-    font-family: 'Noto Sans KR', sans-serif;
-}
-h1{
-    color : #E4733C;
-    font-family: 'Noto Sans KR', sans-serif;
+.shell {
+    display: grid;
+    grid-template-columns: 0 1fr 0;
+    grid-template-rows: auto 8em 1fr auto;
+  }
+  
+  @media (min-width: 600px) {
+    .shell {
+      grid-template-columns: 20px 1fr 20px;
+    }
+  }
+  
+  /* overlap */
+  .shell:before {
+    content: "";
+    grid-column: 1/-1;
+    grid-row: 1/3;
+    background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 90%);
+  }
+  
+  .shell-header {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    color: white;
+    background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 100%);
+    padding: 35px 20px;
+    font-family: 'Noto Sans KR', sans-serif; 
     font-weight: bolder;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-size: 50px;
-}
-h3,h4{
-    font-family: 'Noto Sans KR', sans-serif;
+  }
+  h2{
+    font-family: 'Noto Sans KR', sans-serif; 
     font-weight: bolder;
-}
-div.entire {
-    width: 100%;
-    height: 100%;
-    font-family: 'Noto Sans KR', sans-serif;
-}
 
-div.question_form{
-    width: 45%;
-    float: left;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-    font-family: 'Noto Sans KR', sans-serif;
-}
+  }
+  .shell-body {
+    grid-row: 2 / 4;
+    grid-column: 2 / 3; 
+    min-height: 50vh;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow:  0px 0px 20px rgba(0, 0, 0, 0.25);
+    background-color: #FFF;
 
-div.answer_form{
-    width: 50%;
-    float: right;
-    margin-right: 10px;
-    margin-top: 30px;
-    border: rgb(223, 213, 209) 2px solid;
-    font-family: 'Noto Sans KR', sans-serif;
-}
-
-input.button{
-    font-weight: bolder;
-    font-family: 'Noto Sans KR', sans-serif;
-    border:2px #D95829 solid;
-    border-radius: 4px;
-    background-color: rgb(236, 225, 220);
-}
-textarea.question{
-    background-color: rgb(235, 212, 212);
-    border:none;
-}
-textarea.answer{
-    background-color: rgb(235, 212, 212);
-    border:none;
-}
+  }
+  
+  .shell-footer {
+    grid-column: 2/3;
+    grid-row: -1;
+    padding: 20px; 
+  }
+  
