--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -59,53 +59,49 @@
 
 {% block content %}
     <body>
-    <h1 style="text-align: center; text-shadow: 2px 2px 2px rgb(172, 171, 171); ">QUESTION<a style="color:#FFA13D">
-        &</a> ANSWER</h1>
-    <div class="entire">
-        <div class="question_form" style="margin:13px;">
-            <h3 style="color: #D95829; text-align: center; text-shadow: 1px 1px 1px rgb(172, 171, 171);"><a
-                    style="color: black; font-size: 20px;">{{ user.name }}님 </a>질문</h3>
-            <form action="{% url 'new' %}" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                <textarea class="question" name="question" rows="10" style="width:100%;"
-                          placeholder="질문을 입력해주세요."></textarea><br>
-                <input type="file" name="question_file" style="color: rgba(218, 95, 50, 0.644); font-weight: bold"
-                       multiple>
-                <output id="list"></output>
-                <br>
-                <input style="font-weight: bold; margin-left: 90%; margin-bottom:10px" class="button" type="submit"
-                       value="등록">
-            </form>
-        </div>
-
-        {% for question in questions.all reversed %}
+        <div class="shell">
+            <header class="shell-header">
+                <h1 style="text-align: center;">질문과 답변</h1>
+            </header>
+            <main class="shell-body">
+                <h2>{{ user.name }}님 질문</h2>
+                <form action="{% url 'new' %}" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <textarea class="question" name="question" rows="10" style="width:100%;"
+                    placeholder="질문을 입력해주세요."></textarea><br>
+                    <input type="file" name="question_file" multiple>
+                    <output id="list"></output>
+                    <br>
+                    <input style="font-weight: bold; margin-left: 90%; margin-bottom:10px;"
+                    class="button" type="submit" value="등록">
+                </form>
+            </main>
+            <footer class="shell-footer">
+                {% for question in questions.all reversed %}
             <div id="{{ question.id }}" class="answer_form">
-                <h4 style="color: #D95829;margin-top: 5px; margin-left: 5px;text-shadow: 1px 1px 1px rgb(172, 171, 171);">
-                    답변</h4>
+                <h2>답변</h2>
                 <form action="{% url 'QnA' %}" method="post">
                     {% csrf_token %}
                     <input type="hidden" name="id" value="{{ question.id }}"/>
-                    <a style="color : #5653A6; font-weight:bold;margin-top: 5px; margin-left: 5px;">{{ question.asker }}
-                        / {{ question.pub_date }}</a>
-                    <div id="question_content{{ question.id }}" style="font-weight: bold; color:#E4733C; margin : 10px">
+                    <a>{{ question.asker }} / {{ question.pub_date }}</a>
+                    <div id="question_content{{ question.id }}" >
                         {{ question.question_content }}
                     </div>
                     <div id="div_files">
                     {% for qfile in question.files.all %}
-                        <div style="margin-left: 10px;"><a class="question_file{{ question.id }}" id="{{ qfile.id }}"
-                                                           href="{{ qfile.file.url }}" download=""
-                                                           value=""
-                                                           style="color: rgba(218, 95, 50, 0.644); font-weight: bold;">{{ qfile.file }}</a></div>
-                    {% endfor %}</div>
+                        <div style="margin-left: 10px;">
+                            <a class="question_file{{ question.id }}" id="{{ qfile.id }}"
+                                href="{{ qfile.file.url }}" download="" value="">{{ qfile.file }}</a>
+                        </div>
+                    {% endfor %}
+                    </div>
                     <div id="filedelete"></div>
                     {% if question.asker == user %}
                         <div id="buttonpanel{{ question.id }}" name="revise" style="margin-left: 80%;">
-                            <button type="button" id="{{ question.id }}" class="button revise" value="수정"
-                                    style="border-radius: 4px; border:2px #FFA13D solid;  font-weight: bold; background-color:rgb(247, 235, 217)">
+                            <button type="button" id="{{ question.id }}" class="button revise" value="수정">
                                 수정
                             </button>
-                            <button name="submit" type="submit" id="{{ question.id }}" class="button delete" value="삭제"
-                                    style="border-radius: 4px; border:2px #FFA13D solid; font-weight: bold; background-color:rgb(247, 235, 217)">
+                            <button name="submit" type="submit" id="{{ question.id }}" class="button delete" value="삭제">
                                 삭제
                             </button>
                         </div>
@@ -131,7 +127,8 @@
             </div>
 
         {% endfor %}
-    </div>
+            </footer>
+        </div>
     </body>
 {% endblock %}
 </html>
